# categories-fastapi

./: .env.example  .env.exmaple  Dockerfile  README.md  docker-compose.yml  pyproject.toml  start.sh
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 39ba4ed79bb1_initial_migration.py
src/: main.py
src/api/routes/v1/: orders.py
src/application/schemas/: orders_schemas.py
src/config/: settings.py
src/domain/models/: __init__.py  category.py  client.py  order.py  order_items.py  product.py
src/domain/repositories/: order_repository.py  product_repository.py
src/infrastructure/database/: engine.py  table.py
src/infrastructure/repositories/: __init__.py  order_repository_impl.py  product_repository_impl.py
src/utils/: seed_db.py
